# acheron

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .prettierrc  Cargo.toml  README.md  Taskfile.yml  bun.lockb  go.work  go.work.sum  package.json
.github/workflows/: lints.go.yml  lints.yml
apps/nexus/: .gitignore  go.mod  gqlgen.yml
apps/nexus/cmd/: main.go
apps/nexus/internal/gql/: gql.go
apps/nexus/internal/server/: fx.go
apps/stream_broadcaster/: .gitattributes  .gitignore  Taskfile.yaml  go.mod  go.sum  gqlgen.yml  tools.go
apps/stream_broadcaster/cmd/: main.go
apps/stream_host/: Cargo.toml
apps/stream_host/src/: main.rs
apps/stream_host/src/m3u8/: config.rs  errors.rs  files_manager.rs  mod.rs
apps/stream_host/src/m3u8/transport_stream/: errors.rs  mod.rs
apps/stream_host/src/server/: errors.rs  mod.rs
apps/stream_host/src/srt_server/: mod.rs
apps/stream_whip/: Taskfile.yml  go.mod  go.sum
apps/stream_whip/cmd/: index.html  main  main.go
apps/stream_whip/docs/: docs.go  swagger.json  swagger.yaml
apps/transfer_x/server/: go.mod
apps/transfer_x/shared/: go.mod
cli/: README.md  project.json
cli/src/: main.c3
cli/src/app/: app.c3
config/: config.toml
libraries/go/config/: config.go  go.mod  go.sum  lib.go  parse.go
libraries/go/logg/: go.mod  logg.go
libraries/rs/config/: Cargo.toml
web/app/: package.json  tailwind.config.js
web/app/app/: providers.tsx
web/app/components/: theme-switch.tsx
web/app/config/: fonts.ts  site.ts
web/app/lib/: const.ts
web/app/types/: index.ts
(+91 files in other folders)
