[package]
edition = "2024"
name = "stream_host"
version = "0.1.0"

[dependencies]
ffmpeg-next = "7.1.0"
# futures = "0.3.31"
futures = {version = "0.3"}
# secure-reliable-transport = "0.2.1"
srt-protocol = {version = "0.4"}
srt-tokio = {version = "0.4"}
tokio = {version = "1", features = ["full"]}

config = {workspace = true}
log = {workspace = true}
