[package]
edition = "2024"
name = "stream_host"
version = "0.1.0"

[dependencies]
futures = {version = "0.3"}
srt-protocol = {version = "0.4"}
srt-tokio = {version = "0.4"}
tokio = {version = "1", features = ["fs", "rt-multi-thread", "macros", "time", "sync"]}

config = {workspace = true}
log = {workspace = true}
